--- a/package.json
+++ b/package.json
@@ -43,20 +43,24 @@
     "@nestjs/cli": "^7.5.4",
     "@nestjs/schematics": "^7.2.6",
     "@nestjs/testing": "^7.6.5",
+    "@types/chai": "^4.2.14",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.21",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.13.0",
     "@typescript-eslint/parser": "4.13.0",
+    "chai": "^4.2.0",
     "eslint": "7.18.0",
     "eslint-config-prettier": "7.1.0",
     "eslint-plugin-import": "2.22.1",
+    "graphql-request": "^3.4.0",
     "jest": "^26.6.3",
+    "jest-serial-runner": "^1.1.0",
     "npm-check-updates": "^10.2.5",
     "prettier": "2.2.1",
     "supertest": "6.1.1",
-    "ts-jest": "26.4.4",
+    "ts-jest": "^26.4.4",
     "ts-loader": "8.0.14",
     "ts-node": "9.1.1",
     "tsconfig-paths": "3.9.0",
